// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders a brand state with content 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Brand
  </div>
</div>
`;

exports[`Divider renders a content aligned center 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Center
  </div>
</div>
`;

exports[`Divider renders a content aligned end 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    End
  </div>
</div>
`;

exports[`Divider renders a content aligned start 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Start
  </div>
</div>
`;

exports[`Divider renders a default divider 1`] = `
<div
  className=""
  role="separator"
/>
`;

exports[`Divider renders a divider with content 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Default Divider
  </div>
</div>
`;

exports[`Divider renders a divider with different color 1`] = `
<div
  className=""
  role="separator"
/>
`;

exports[`Divider renders a divider with important 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Important
  </div>
</div>
`;

exports[`Divider renders a divider with inset 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Inset
  </div>
</div>
`;

exports[`Divider renders a horizontal a fixed width 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
  style={
    Object {
      "width": 100,
    }
  }
>
  <div
    id="divider-1"
  >
    fixed 100px width
  </div>
</div>
`;

exports[`Divider renders a strong state with content 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Strong
  </div>
</div>
`;

exports[`Divider renders a subtle state with content 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Subtle
  </div>
</div>
`;

exports[`Divider renders a vertical a fixed height 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
  style={
    Object {
      "height": 100,
    }
  }
>
  <div
    id="divider-1"
  >
    fixed 100px height
  </div>
</div>
`;

exports[`Divider renders a vertical divider 1`] = `
<div
  className=""
  role="separator"
/>
`;

exports[`Divider renders a vertical divider with content 1`] = `
<div
  aria-labelledby="divider-1"
  className=""
  role="separator"
>
  <div
    id="divider-1"
  >
    Vertical
  </div>
</div>
`;
